// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AccountForm /> should render a form 1`] = `
<form
  className="form-horizontal"
  id="profile-account"
  onSubmit={[Function]}
>
  <div
    className="horizontal_field_with_border_top"
    style={
      Object {
        "border": 0,
      }
    }
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="account__email"
    >
      <FormattedMessage
        id="proposal.vote.form.email"
        values={Object {}}
      />
    </label>
    <div>
      <Field
        component={[Function]}
        divClassName="col-sm-6"
        id="account__email"
        name="email"
        style={
          Object {
            "marginLeft": 15,
          }
        }
        type="email"
      />
      <span
        className="small excerpt col-sm-6 col-sm-offset-3"
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <i
          className="icon cap-lock-2"
        />
        <FormattedMessage
          id="account.your_email_is_not_public"
          values={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="col-sm-6 col-sm-offset-3"
    id="profile-alert-form"
  >
    <AlertForm
      errorMessage={null}
      invalid={false}
      submitFailed={false}
      submitSucceeded={false}
      submitting={false}
      valid={true}
    />
  </div>
</form>
`;

exports[`<AccountForm /> should render a form with an alert if submitted password is wrong 1`] = `
<form
  className="form-horizontal"
  id="profile-account"
  onSubmit={[Function]}
>
  <div
    className="horizontal_field_with_border_top"
    style={
      Object {
        "border": 0,
      }
    }
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="account__email"
    >
      <FormattedMessage
        id="proposal.vote.form.email"
        values={Object {}}
      />
    </label>
    <div>
      <Field
        component={[Function]}
        divClassName="col-sm-6"
        id="account__email"
        name="email"
        style={
          Object {
            "marginLeft": 15,
          }
        }
        type="email"
      />
      <span
        className="small excerpt col-sm-6 col-sm-offset-3"
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <i
          className="icon cap-lock-2"
        />
        <FormattedMessage
          id="account.your_email_is_not_public"
          values={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="col-sm-6 col-sm-offset-3"
    id="profile-alert-form"
  >
    <AlertForm
      errorMessage="user.confirm.wrong_password"
      invalid={false}
      submitFailed={false}
      submitSucceeded={false}
      submitting={false}
      valid={true}
    />
  </div>
</form>
`;

exports[`<AccountForm /> should render a form with an info if a confirmation email has been resent 1`] = `
<form
  className="form-horizontal"
  id="profile-account"
  onSubmit={[Function]}
>
  <Alert
    bsClass="alert"
    bsStyle="warning"
    closeLabel="Close alert"
  >
    <FormattedMessage
      id="account.email_confirmation_sent"
      values={Object {}}
    />
  </Alert>
  <div
    className="horizontal_field_with_border_top"
    style={
      Object {
        "border": 0,
      }
    }
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="account__email"
    >
      <FormattedMessage
        id="proposal.vote.form.email"
        values={Object {}}
      />
    </label>
    <div>
      <Field
        component={[Function]}
        divClassName="col-sm-6"
        id="account__email"
        name="email"
        style={
          Object {
            "marginLeft": 15,
          }
        }
        type="email"
      />
      <span
        className="small excerpt col-sm-6 col-sm-offset-3"
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <i
          className="icon cap-lock-2"
        />
        <FormattedMessage
          id="account.your_email_is_not_public"
          values={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="col-sm-6 col-sm-offset-3"
  >
    <p
      className="small excerpt"
    >
      <FormattedHTMLMessage
        id="user.confirm.profile_help"
        values={
          Object {
            "email": "new-email@test.com",
          }
        }
      />
    </p>
    <p
      className="small excerpt col-sm-6 col-sm-offset-3"
    >
      <a
        href="#resend"
        onClick={[Function]}
      >
        <FormattedMessage
          id="user.confirm.resend"
          values={Object {}}
        />
      </a>
       · 
      <a
        href="#cancel"
        onClick={[Function]}
      >
        <FormattedMessage
          id="user.confirm.cancel"
          values={Object {}}
        />
      </a>
    </p>
  </div>
  <div
    className="col-sm-6 col-sm-offset-3"
    id="profile-alert-form"
  >
    <AlertForm
      errorMessage={null}
      invalid={false}
      submitFailed={false}
      submitSucceeded={false}
      submitting={false}
      valid={true}
    />
  </div>
</form>
`;

exports[`<AccountForm /> should render a form with information about new email 1`] = `
<form
  className="form-horizontal"
  id="profile-account"
  onSubmit={[Function]}
>
  <div
    className="horizontal_field_with_border_top"
    style={
      Object {
        "border": 0,
      }
    }
  >
    <label
      className="col-sm-3 control-label"
      htmlFor="account__email"
    >
      <FormattedMessage
        id="proposal.vote.form.email"
        values={Object {}}
      />
    </label>
    <div>
      <Field
        component={[Function]}
        divClassName="col-sm-6"
        id="account__email"
        name="email"
        style={
          Object {
            "marginLeft": 15,
          }
        }
        type="email"
      />
      <span
        className="small excerpt col-sm-6 col-sm-offset-3"
        style={
          Object {
            "paddingBottom": 10,
          }
        }
      >
        <i
          className="icon cap-lock-2"
        />
        <FormattedMessage
          id="account.your_email_is_not_public"
          values={Object {}}
        />
      </span>
    </div>
  </div>
  <div
    className="col-sm-6 col-sm-offset-3"
  >
    <p
      className="small excerpt"
    >
      <FormattedHTMLMessage
        id="user.confirm.profile_help"
        values={
          Object {
            "email": "new-email@test.com",
          }
        }
      />
    </p>
    <p
      className="small excerpt col-sm-6 col-sm-offset-3"
    >
      <a
        href="#resend"
        onClick={[Function]}
      >
        <FormattedMessage
          id="user.confirm.resend"
          values={Object {}}
        />
      </a>
       · 
      <a
        href="#cancel"
        onClick={[Function]}
      >
        <FormattedMessage
          id="user.confirm.cancel"
          values={Object {}}
        />
      </a>
    </p>
  </div>
  <div
    className="col-sm-6 col-sm-offset-3"
    id="profile-alert-form"
  >
    <AlertForm
      errorMessage={null}
      invalid={false}
      submitFailed={false}
      submitSucceeded={false}
      submitting={false}
      valid={true}
    />
  </div>
</form>
`;
